<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:padding="16dp">

    <Button
        android:id="@+id/saveBtn"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout4" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/player1_name"
        app:boxBackgroundColor="@null"
        app:errorEnabled="true"
        app:errorIconDrawable="@null"
        app:layout_constraintEnd_toStartOf="@+id/textInputLayout3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cancelAction">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPlayer1Name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:imeOptions="actionNext"
            android:maxLength="100"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/score"
        android:minWidth="100dp"
        app:boxBackgroundColor="@null"
        app:errorEnabled="true"
        app:errorIconDrawable="@null"
        app:layout_constraintBottom_toBottomOf="@+id/textInputLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textInputLayout2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPlayer1Score"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLength="2"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:hint="@string/player2_name"
        app:boxBackgroundColor="@null"
        app:errorEnabled="true"
        app:errorIconDrawable="@null"
        app:layout_constraintEnd_toStartOf="@+id/textInputLayout3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPlayer2Name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:imeOptions="actionNext"
            android:maxLength="100">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/score"
        android:minWidth="100dp"
        app:boxBackgroundColor="@null"
        app:errorEnabled="true"
        app:errorIconDrawable="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPlayer2Score"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLength="2"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/cancelAction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackgroundBorderless"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />


</androidx.constraintlayout.widget.ConstraintLayout>